delete file noe used
